Fixed overlapping anchors.

--- a/css/globals.less
+++ b/css/globals.less
@@ -224,6 +224,7 @@ td, ol, ul, p, tt {
     display: block;
     margin-top: -(@NAVIGATION_HEIGHT);
     height: @NAVIGATION_HEIGHT;
+    visibility: hidden;
     @media screen and (max-width: @SMARTPHONE_MAX_PORTRAIT) { 
         margin-top: -(@NAVIGATION_HEIGHT_MOBILE);
         height: @NAVIGATION_HEIGHT_MOBILE;
